create page add

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 <body>
     <div id="root"><%html%></div>
     <script type="text/javascript">var props = '<%ssg_props%>'</script>
-    <script type="text/javascript" src="/index.js"></script>
+    <script type="text/javascript" src="/js/<%client_js%>.js"></script>
 </body>
 </html>
